--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "falcor",
-  "version": "0.1.16",
+  "name": "@mixgenius/falcor",
+  "version": "0.5.0",
   "description": "A JavaScript library for efficient data fetching.",
   "main": "./lib/index.js",
   "homepage": "https://github.com/Netflix/falcor",
@@ -81,5 +81,8 @@
     "falcor-path-syntax": "0.2.4",
     "falcor-path-utils": "0.5.1",
     "rx": "2.5.3"
+  },
+  "publishConfig": {
+    "registry": "http://ci.mixgenius.com:4874"
   }
 }
